cmake_minimum_required (VERSION 3.10)
project (JUCE)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../JuceLibraryCode)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../JUCE/modules)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../Source/Misc/vst2sdk)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../Source/Core)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../Source/Misc/lua/include)
file(GLOB_RECURSE JUCE *.cpp)
add_library(JUCE ${JUCE})